--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,328 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>Generador de Cotización</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: #f3f6fa;
+      margin: 0;
+      padding: 20px;
+      color: #333;
+    }
+    h2 {
+      text-align: center;
+      color: #2c3e50;
+      margin-bottom: 20px;
+    }
+    .formulario {
+      max-width: 900px;
+      margin: auto;
+      background: #fff;
+      padding: 25px;
+      border-radius: 12px;
+      box-shadow: 0px 4px 10px rgba(0,0,0,0.1);
+    }
+    label {
+      display: block;
+      margin-top: 10px;
+      font-weight: bold;
+    }
+    input, textarea {
+      width: 100%;
+      padding: 8px;
+      margin-top: 5px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      font-size: 14px;
+    }
+    textarea {
+      resize: vertical;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 15px;
+      border: 2px solid #0b437a;
+    }
+    th, td {
+      border: 1px solid #0b437a;
+      padding: 10px;
+      text-align: center;
+      vertical-align: middle;
+    }
+    th {
+      background: #2c3e50;
+      color: white;
+    }
+    td {
+      background: #fafafa;
+    }
+    .btn {
+      margin-top: 15px;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      font-size: 14px;
+      font-weight: bold;
+      transition: 0.3s;
+    }
+    .btn-add {
+      background: #27ae60;
+      color: white;
+    }
+    .btn-add:hover {
+      background: #219150;
+    }
+    .btn-download {
+      background: #2980b9;
+      color: white;
+      float: right;
+    }
+    .btn-download:hover {
+      background: #21618c;
+    }
+    .btn-delete {
+      background: #e74c3c;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      padding: 5px 8px;
+      cursor: pointer;
+    }
+    .btn-delete:hover {
+      background: #c0392b;
+    }
+    #logoPreview {
+      margin: 10px auto;
+      display: block;
+      max-width: 150px;
+      max-height: 80px;
+    }
+  </style>
+</head>
+<body>
+  <h2>Generador de Cotización</h2>
+  <div class="formulario">
+    <label>Cliente: <input type="text" id="cliente"></label>
+    <label>Fecha: <input type="date" id="fecha"></label>
+    <label>N° de Cotización: <input type="text" id="numCotizacion"></label>
+    <label>Logo de la Empresa: <input type="file" id="logo" accept="image/*"></label>
+    <img id="logoPreview" alt="Vista previa del logo">
+
+    <h3>Productos / Servicios</h3>
+    <table id="tabla-productos">
+      <tr>
+        <th>Cantidad</th>
+        <th>Descripción</th>
+        <th>Precio Unitario (B/.)</th>
+        <th>Total (B/.)</th>
+        <th>Acción</th>
+      </tr>
+    </table>
+    <button class="btn btn-add" onclick="agregarFila()">➕ Añadir Producto</button>
+
+    <label style="margin-top: 20px;">Observación:
+      <textarea id="observacion" rows="4" placeholder="Escriba aquí cualquier observación adicional..."></textarea>
+    </label>
+
+    <button class="btn btn-download" onclick="generarPDF()">💾 Descargar PDF</button>
+    <div style="clear:both;"></div>
+  </div>
+
+  <script>
+    let logoBase64 = null;
+
+    document.getElementById("logo").addEventListener("change", function() {
+      const file = this.files[0];
+      if (file) {
+        const reader = new FileReader();
+        reader.onload = function(e) {
+          logoBase64 = e.target.result;
+          const preview = document.getElementById("logoPreview");
+          preview.src = logoBase64;
+          preview.style.display = "block";
+        }
+        reader.readAsDataURL(file);
+      }
+    });
+
+    function agregarFila() {
+      let tabla = document.getElementById("tabla-productos");
+      let fila = tabla.insertRow(-1);
+      fila.insertCell(0).innerHTML = `<input type="number" value="1" min="1" onchange="calcularTotal(this)">`;
+      fila.insertCell(1).innerHTML = `<textarea placeholder="Descripción" rows="3" style="width:95%;"></textarea>`;
+      fila.insertCell(2).innerHTML = `<input type="number" value="0" step="0.01" onchange="calcularTotal(this)">`;
+      fila.insertCell(3).innerText = '0.00';
+      fila.insertCell(4).innerHTML = `<button class="btn-delete" onclick="eliminarFila(this)">🗑️</button>`;
+    }
+
+    function calcularTotal(elemento) {
+      let fila = elemento.parentNode.parentNode;
+      let cantidad = fila.cells[0].children[0].value;
+      let precio = fila.cells[2].children[0].value;
+      fila.cells[3].innerText = (cantidad * precio).toFixed(2);
+    }
+
+    function eliminarFila(boton) {
+      boton.parentNode.parentNode.remove();
+    }
+
+    function generarPDF() {
+      const { jsPDF } = window.jspdf;
+      let doc = new jsPDF("p", "mm", "a4");
+
+      // Encabezado
+      doc.setFillColor(41, 128, 185);
+      doc.rect(0, 0, 210, 40, "F");
+
+      // Logo
+      if (logoBase64) {
+        doc.addImage(logoBase64, "PNG", 160, 8, 35, 25);
+      }
+      // Marco del logo
+      doc.setDrawColor(255, 255, 255); // blanco para resaltar sobre el fondo azul
+      doc.setLineWidth(0.5);
+      doc.rect(160, 8, 35, 25);
+
+      // Título
+      doc.setTextColor(255, 255, 255);
+      doc.setFontSize(18);
+      doc.setFont(undefined, 'bold');
+      doc.text("MULTISERVICIOS SG", 105, 15, { align: "center" });
+
+      doc.setFontSize(13);
+      doc.setFont(undefined, 'normal');
+      doc.text("Cel: 6748-8227", 105, 23, { align: "center" });
+
+      doc.setFontSize(11);
+      doc.text("Servicios de Construcción, Remodelaciones y Mantenimiento", 105, 30, { align: "center" });
+      doc.setTextColor(0, 0, 0);
+
+      // Datos cliente
+      let cliente = document.getElementById("cliente").value;
+      let fecha = document.getElementById("fecha").value;
+      let numCotizacion = document.getElementById("numCotizacion").value;
+
+      doc.setFontSize(12);
+      doc.text(`Cliente: ${cliente}`, 20, 50);
+      doc.text(`Fecha: ${fecha}`, 20, 58);
+      doc.text(`N° Cotización: ${numCotizacion}`, 140, 50);
+
+      // Tabla productos
+      let tabla = document.getElementById("tabla-productos");
+      let filas = tabla.rows;
+      let productos = [];
+      let sumaTotal = 0;
+
+      for (let i = 1; i < filas.length; i++) {
+        let cantidad = filas[i].cells[0].children[0].value;
+        let desc = filas[i].cells[1].children[0].value;
+        let precio = filas[i].cells[2].children[0].value;
+        let total = (cantidad * precio).toFixed(2);
+        sumaTotal += parseFloat(total);
+        productos.push([cantidad, desc, precio, total]);
+      }
+
+      productos.push([
+        { content: "Sub-Total", colSpan: 3, styles: { halign: "right" } },
+        sumaTotal.toFixed(2)
+      ]);
+      productos.push([
+        { content: "Total", colSpan: 3, styles: { halign: "right", fillColor: [41,128,185], textColor: 255, fontStyle: "bold" } },
+        sumaTotal.toFixed(2)
+      ]);
+
+      doc.autoTable({
+        head: [['Cantidad', 'Descripción', 'Precio Unitario (B/.)', 'Total (B/.)']],
+        body: productos,
+        startY: 75,
+        margin: { left: 20, right: 20 },
+        styles: { lineWidth: 0.3, lineColor: [0,0,0] },
+        headStyles: { fillColor: [44,62,80], textColor: 255 },
+        columnStyles: {
+          0: { halign: 'center', cellWidth: 25 },
+          1: { halign: 'left', cellWidth: 80 },
+          2: { halign: 'right', cellWidth: 35 },
+          3: { halign: 'right', cellWidth: 30 }
+        },
+        tableWidth: 'auto',
+        theme: 'grid'
+      });
+
+      // Observación
+      let observacion = document.getElementById("observacion").value.trim();
+      if (observacion) {
+        let y = doc.lastAutoTable.finalY + 80;
+        doc.setFontSize(12);
+        doc.setFont(undefined, 'bold');
+        doc.text("Observación:", 20, y);
+        y += 5;
+        let textLines = doc.splitTextToSize(observacion, 170);
+        let boxHeight = textLines.length * 6 + 10;
+
+        doc.setDrawColor(44, 62, 80);
+        doc.rect(20, y, 170, boxHeight);
+        doc.setFontSize(11);
+        doc.setFont(undefined, 'normal');
+        doc.text(textLines, 25, y + 8);
+      }
+
+      // Pie de página
+      let pageHeight = doc.internal.pageSize.height;
+      let pieY = pageHeight - 55;
+
+      doc.setFontSize(11);
+      doc.setFont(undefined, 'bold');
+      doc.text("Método de Pago:", 20, pieY);
+      doc.setFont(undefined, 'normal');
+      doc.setFontSize(10);
+      pieY += 6;
+      doc.text("- EFRAIN GUILLERMO GUERRA PINEDA", 20, pieY);
+      pieY += 5;
+      doc.text("- Banco General (Ahorro)", 20, pieY);
+      pieY += 5;
+      doc.text("- 0442986405610", 20, pieY);
+
+      let pieYRight = pageHeight - 55;
+      doc.setFontSize(11);
+      doc.setFont(undefined, 'bold');
+      doc.text("Otras Opciones de Pago:", 120, pieYRight);
+      doc.setFont(undefined, 'normal');
+      doc.setFontSize(10);
+      pieYRight += 6;
+      doc.text("- EFRAIN GUILLERMO GUERRA PINEDA", 120, pieYRight);
+      pieYRight += 5;
+      doc.text("- Banco General (Ahorro)", 120, pieYRight);
+      pieYRight += 5;
+      doc.text("- 0448000009515", 120, pieYRight);
+
+      let pieFinalY = pageHeight - 20;
+      doc.setFontSize(10);
+      doc.setTextColor(100);
+      doc.text("Gracias por preferirnos. Valoramos su confianza en nuestros servicios.", 105, pieFinalY - 5, { align: "center" });
+      doc.text("Tel: (507) 6748-8227 | Email: efraineguerra@gmail.com", 105, pieFinalY, { align: "center" });
+
+      // Descargar / abrir PDF
+      if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
+        let pdfBlobUrl = doc.output("bloburl");
+        window.open(pdfBlobUrl, "_blank");
+      } else {
+        doc.save("cotizacion.pdf");
+      }
+    }
+  </script>
+</body>
+</html>
+
+
+
+
+
+
+
 
